--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "react-tournament-grid",
   "version": "0.0.2",
   "description": "React tournament grid with simple underlying data model",
-  "main": "src/",
+  "main": "./dist/index.js",
   "scripts": {
     "build": "babel src --presets babel-preset-es2015 --out-dir dist",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -25,6 +25,7 @@
   "devDependencies": {
     "babel-cli": "^6.24.1",
     "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
     "react-tournament-grid": "^0.0.1"
   },
   "dependencies": {}
