--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-tournament-grid",
-  "version": "0.0.6",
+  "version": "0.0.7",
   "description": "React tournament grid with simple underlying data model",
   "main": "./dist/index.js",
   "scripts": {
@@ -12,7 +12,11 @@
     "type": "git",
     "url": "git+https://github.com/nikolaevigor/react-tournament-grid.git"
   },
-  "keywords": ["react", "tournament", "grid"],
+  "keywords": [
+    "react",
+    "tournament",
+    "grid"
+  ],
   "author": "Igor Nikolaev <nikolaevigor95@gmail.com> (http://nikolaev.io)",
   "license": "ISC",
   "bugs": {
